Alignment issue for mobile-screen Alignment issue in mobile version solved .

--- a/src/styles/_comments.scss
+++ b/src/styles/_comments.scss
@@ -63,6 +63,7 @@ background-color: #353744;
 margin-bottom: 20px;
   line-height: 1.8;
   word-spacing: 0.2rem;
+  word-break:break-all;
 }
 .comment:hover{
   background-color:#4f739e ;
